--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#222831</color>
     <color name="colorAccent">#00adb5</color>
     <color name="indicator">#5ae4f9f5</color>
+    <color name="indicator1">#5ae4f9f5</color>
 </resources>
