--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,25 +24,25 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/tab_View_pager"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:background="@color/colorAccent"
+        android:layout_height="48dp"
+        android:background="@color/Tabbackground"
         android:clipToPadding="true"
         android:paddingLeft="4dp"
         android:paddingRight="4dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:stl_defaultTabTextAllCaps="false"
-        app:stl_defaultTabTextColor="#fcbebebe"
+        app:stl_defaultTabTextColor="@color/defaultTabTextColor"
         app:stl_defaultTabTextHorizontalPadding="19dp"
         app:stl_defaultTabTextMinWidth="0dp"
         app:stl_defaultTabTextSize="16sp"
-        app:stl_dividerColor="@android:color/darker_gray"
+        app:stl_dividerColor="@color/dividerColor"
         app:stl_dividerThickness="0dp"
-        app:stl_indicatorColor="@color/indicator"
+        app:stl_indicatorColor="@color/indicatorColor"
         app:stl_indicatorCornerRadius="10dp"
         app:stl_indicatorGravity="center"
         app:stl_indicatorInterpolation="smart"
-        app:stl_indicatorThickness="40dp"
+        app:stl_indicatorThickness="35dp"
         app:stl_indicatorWidth="auto"
         app:stl_indicatorWithoutPadding="false"
         app:stl_underlineColor="@android:color/transparent" />
