--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#393e46</color>
+    <color name="colorPrimary">#2d4059</color>
     <color name="colorPrimaryDark">#222831</color>
     <color name="colorAccent">#00adb5</color>
-    <color name="indicator">#5ae4f9f5</color>
-    <color name="indicator1">#5ae4f9f5</color>
+    <color name="defaultTabTextColor">#ffffff</color>
+    <color name="dividerColor">#52616b</color>
+    <color name="indicatorColor">#644d606e</color>
+    <color name="Tabbackground">#572d4059</color>
 </resources>
