--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="dividerColor">#52616b</color>
     <color name="indicatorColor">#644d606e</color>
     <color name="Tabbackground">#572d4059</color>
+    <color name="Background">#572d4059</color>
 </resources>
