--- a/app/src/main/res/layout/recyclerviewitem_seved.xml
+++ b/app/src/main/res/layout/recyclerviewitem_seved.xml
@@ -39,67 +39,65 @@
                     android:id="@+id/artist_txtv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="24dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginEnd="24dp"
                     android:layout_marginTop="8dp"
                     android:gravity="end"
-                    android:singleLine="true"
-                    android:text="Omid biglary"
-                    android:textAlignment="viewStart"
+                    android:text="امید بیگلری"
+                    android:textAlignment="viewEnd"
                     android:textColor="@color/cardview_light_background"
-                    android:textDirection="ltr"
-                    android:textSize="14sp"
+                    android:textDirection="rtl"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/det_img"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/song_txtv"
-                    app:layout_constraintVertical_bias="0.0" />
+                    app:layout_constraintVertical_bias="0.0"
+                    android:layout_marginRight="24dp" />
 
                 <TextView
                     android:id="@+id/song_txtv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
-                    android:gravity="end"
                     android:singleLine="true"
-                    android:text="Delbar"
-                    android:textAlignment="viewStart"
+                    android:text="دلبر"
+                    android:textAlignment="viewEnd"
                     android:textColor="@color/cardview_light_background"
-                    android:textSize="15sp"
-                    app:layout_constraintEnd_toStartOf="@+id/fav_img"
-                    app:layout_constraintHorizontal_bias="0.156"
+                    android:textSize="18sp"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/artist_imageView" />
+                    app:layout_constraintTop_toBottomOf="@+id/artist_imageView"
+                    android:gravity="end"
+                    android:layout_marginRight="8dp" />
 
                 <ImageButton
                     android:id="@+id/fav_img"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:layout_marginEnd="4dp"
-                    android:layout_marginTop="2dp"
-                    android:background="?attr/selectableItemBackground"
+                    android:layout_marginStart="3dp"
+                    android:layout_marginTop="8dp"
                     android:clickable="true"
+                    android:background="?attr/selectableItemBackground"
                     app:layout_constraintBottom_toTopOf="@+id/det_img"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/artist_imageView"
-                    app:layout_constraintVertical_bias="1.0"
-                    app:srcCompat="@drawable/ic_not_fave" />
+                    app:srcCompat="@drawable/ic_not_fave"
+                    android:layout_marginLeft="3dp" />
 
                 <ImageButton
                     android:id="@+id/det_img"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="1dp"
-                    android:layout_marginEnd="4dp"
+                    android:layout_marginBottom="3dp"
+                    android:layout_marginStart="3dp"
                     android:background="@android:color/transparent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/fav_img"
-                    app:srcCompat="@drawable/ic_details" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:srcCompat="@drawable/ic_details"
+                    android:layout_marginLeft="3dp" />
             </android.support.constraint.ConstraintLayout>
 
         </android.support.v7.widget.CardView>
