--- a/app/src/main/res/layout/recyclerviewitem_seved.xml
+++ b/app/src/main/res/layout/recyclerviewitem_seved.xml
@@ -39,65 +39,67 @@
                     android:id="@+id/artist_txtv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginEnd="24dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="24dp"
                     android:layout_marginTop="8dp"
                     android:gravity="end"
-                    android:text="امید بیگلری"
-                    android:textAlignment="viewEnd"
+                    android:singleLine="true"
+                    android:text="Omid biglary"
+                    android:textAlignment="viewStart"
                     android:textColor="@color/cardview_light_background"
-                    android:textDirection="rtl"
+                    android:textDirection="ltr"
+                    android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintEnd_toStartOf="@+id/det_img"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/song_txtv"
-                    app:layout_constraintVertical_bias="0.0"
-                    android:layout_marginRight="24dp" />
+                    app:layout_constraintVertical_bias="0.0" />
 
                 <TextView
                     android:id="@+id/song_txtv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
-                    android:singleLine="true"
-                    android:text="دلبر"
-                    android:textAlignment="viewEnd"
-                    android:textColor="@color/cardview_light_background"
-                    android:textSize="18sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/artist_imageView"
                     android:gravity="end"
-                    android:layout_marginRight="8dp" />
+                    android:singleLine="true"
+                    android:text="Delbar"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/cardview_light_background"
+                    android:textSize="15sp"
+                    app:layout_constraintEnd_toStartOf="@+id/fav_img"
+                    app:layout_constraintHorizontal_bias="0.156"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/artist_imageView" />
 
                 <ImageButton
                     android:id="@+id/fav_img"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:layout_marginStart="3dp"
-                    android:layout_marginTop="8dp"
-                    android:clickable="true"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginTop="2dp"
                     android:background="?attr/selectableItemBackground"
+                    android:clickable="true"
                     app:layout_constraintBottom_toTopOf="@+id/det_img"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/artist_imageView"
-                    app:srcCompat="@drawable/ic_not_fave"
-                    android:layout_marginLeft="3dp" />
+                    app:layout_constraintVertical_bias="1.0"
+                    app:srcCompat="@drawable/ic_not_fave" />
 
                 <ImageButton
                     android:id="@+id/det_img"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="3dp"
-                    android:layout_marginStart="3dp"
+                    android:layout_marginBottom="1dp"
+                    android:layout_marginEnd="4dp"
                     android:background="@android:color/transparent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:srcCompat="@drawable/ic_details"
-                    android:layout_marginLeft="3dp" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/fav_img"
+                    app:srcCompat="@drawable/ic_details" />
             </android.support.constraint.ConstraintLayout>
 
         </android.support.v7.widget.CardView>
