--- a/app/src/main/res/layout/recent_recy_item.xml
+++ b/app/src/main/res/layout/recent_recy_item.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="12dp"
     android:background="@color/Background"
+    android:padding="8dp"
     tools:layout_editor_absoluteY="81dp">
 
     <FrameLayout
@@ -27,8 +27,8 @@
 
                 <ImageView
                     android:id="@+id/artist_imageView"
-                    android:layout_width="180dp"
-                    android:layout_height="190dp"
+                    android:layout_width="190dp"
+                    android:layout_height="200dp"
                     android:scaleType="fitXY"
                     android:src="@drawable/omidnb"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -48,13 +48,14 @@
                     android:text="Omid biglary"
                     android:textAlignment="viewStart"
                     android:textColor="@color/cardview_light_background"
-                    android:textDirection="ltr"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/det_img"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/song_txtv"
-                    app:layout_constraintVertical_bias="0.0" />
+                    app:layout_constraintVertical_bias="0.0"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginLeft="24dp" />
 
                 <TextView
                     android:id="@+id/song_txtv"
@@ -62,7 +63,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="14dp"
                     android:gravity="end"
                     android:singleLine="true"
                     android:text="Delbar"
@@ -95,7 +96,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="1dp"
                     android:layout_marginEnd="4dp"
-                    android:background="@android:color/transparent"
+                    android:background="?attr/selectableItemBackground"
+                    android:clickable="true"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/fav_img"
