slide panel work.

--- a/app/src/main/res/layout/main_slide_lay.xml
+++ b/app/src/main/res/layout/main_slide_lay.xml
@@ -3,4 +3,29 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:sothree="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/sliding_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom"
+        sothree:umanoPanelHeight="68dp"
+        sothree:umanoShadowHeight="4dp"
+        sothree:umanoFadeColor="@color/indicatorColor"
+        >
+
+
+        <include
+            layout="@layout/activity_main"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+
+
+        <include
+            android:id="@+id/isgone"
+            layout="@layout/up_slide_lay"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </com.sothree.slidinguppanel.SlidingUpPanelLayout>
+
 </android.support.constraint.ConstraintLayout>
