--- a/app/src/main/res/layout/main_slide_lay.xml
+++ b/app/src/main/res/layout/main_slide_lay.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="bottom"
-        sothree:umanoPanelHeight="68dp"
+        sothree:umanoPanelHeight="?attr/actionBarSize"
         sothree:umanoShadowHeight="4dp"
         sothree:umanoFadeColor="@color/indicatorColor"
         >
