--- a/app/src/main/res/layout/main_slide_lay.xml
+++ b/app/src/main/res/layout/main_slide_lay.xml
@@ -15,7 +15,7 @@
 
 
         <include
-            layout="@layout/activity_main"
+            layout="@layout/cor_activity_main"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             />
