--- a/app/src/main/res/layout/cor_activity_main.xml
+++ b/app/src/main/res/layout/cor_activity_main.xml
@@ -49,7 +49,7 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="462dp"
         android:layout_below="@id/tab_View_pager"
         android:layout_gravity="bottom"
         app:layout_anchor="@+id/tab_View_pager"
