--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/toolbarcon"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
@@ -23,7 +23,7 @@
 
     <com.ogaclejapan.smarttablayout.SmartTabLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/tab_View_pager"
+        android:id="@+id/tab_View_pagercon"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/Tabbackground"
@@ -49,7 +49,7 @@
         app:stl_underlineColor="@android:color/transparent" />
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager"
+        android:id="@+id/viewpagercon"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_below="@id/tab_View_pager"
