--- a/app/src/main/res/layout/cor_activity_main.xml
+++ b/app/src/main/res/layout/cor_activity_main.xml
@@ -22,9 +22,10 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_gravity="bottom"
-        android:background="@color/Tabbackground"
+        android:layout_marginTop="1dp"
+        android:background="@drawable/round_item"
         android:clipToPadding="true"
-        android:paddingLeft="6dp"
+        android:paddingLeft="20dp"
         android:paddingRight="6dp"
         app:layout_anchor="@+id/toolbar"
         app:layout_anchorGravity="bottom|center"
@@ -32,29 +33,32 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:stl_defaultTabTextAllCaps="false"
         app:stl_defaultTabTextColor="@color/defaultTabTextColor"
-        app:stl_defaultTabTextHorizontalPadding="19dp"
+        app:stl_defaultTabTextHorizontalPadding="15dp"
         app:stl_defaultTabTextMinWidth="0dp"
-        app:stl_defaultTabTextSize="16sp"
+        app:stl_defaultTabTextSize="17sp"
         app:stl_dividerColor="@color/dividerColor"
         app:stl_dividerThickness="0dp"
         app:stl_indicatorColor="@color/indicatorColor"
-        app:stl_indicatorCornerRadius="10dp"
+        app:stl_indicatorCornerRadius="7dp"
         app:stl_indicatorGravity="center"
         app:stl_indicatorInterpolation="smart"
         app:stl_indicatorThickness="45dp"
         app:stl_indicatorWidth="auto"
         app:stl_indicatorWithoutPadding="false"
-        app:stl_underlineColor="@android:color/transparent" />
+        app:stl_underlineColor="@android:color/transparent"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="462dp"
+        android:layout_height="match_parent"
         android:layout_below="@id/tab_View_pager"
         android:layout_gravity="bottom"
         app:layout_anchor="@+id/tab_View_pager"
         app:layout_anchorGravity="bottom|center"
-        tools:layout_editor_absoluteY="119dp">
+        tools:layout_editor_absoluteY="119dp"
+        android:layout_marginTop="100dp">
 
 
     </android.support.v4.view.ViewPager>
