--- a/app/src/main/res/layout/recent_recy_item.xml
+++ b/app/src/main/res/layout/recent_recy_item.xml
@@ -37,11 +37,10 @@
 
                 <TextView
                     android:id="@+id/artist_txtv"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="102dp"
+                    android:layout_height="17dp"
                     android:layout_marginBottom="8dp"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginStart="24dp"
                     android:layout_marginTop="8dp"
                     android:gravity="end"
                     android:singleLine="true"
@@ -53,16 +52,14 @@
                     app:layout_constraintEnd_toStartOf="@+id/det_img"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/song_txtv"
-                    app:layout_constraintVertical_bias="0.0"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginLeft="24dp" />
+                    app:layout_constraintVertical_bias="0.0" />
 
                 <TextView
                     android:id="@+id/song_txtv"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="125dp"
+                    android:layout_height="16dp"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="4dp"
                     android:layout_marginTop="14dp"
                     android:gravity="end"
                     android:singleLine="true"
