--- a/app/src/main/res/layout/cor_activity_main.xml
+++ b/app/src/main/res/layout/cor_activity_main.xml
@@ -58,7 +58,7 @@
         app:layout_anchor="@+id/tab_View_pager"
         app:layout_anchorGravity="bottom|center"
         tools:layout_editor_absoluteY="119dp"
-        android:layout_marginTop="100dp">
+        android:layout_marginTop="?attr/actionBarSize">
 
 
     </android.support.v4.view.ViewPager>
