--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,6 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
@@ -8,10 +8,4 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:popupTheme">@style/PopupTheme</item>
     </style>
-
-    <style name="PopupTheme" parent="Theme.AppCompat.Light">
-        <item name="android:background">@color/Tabbackground</item>
-        <item name="android:textColor">#ffff</item>
-    </style>
-
 </resources>
