--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:popupTheme">@style/PopupTheme</item>
+        <item name="popupTheme">@style/PopupTheme</item>
     </style>
 
     <style name="PopupTheme" parent="Theme.AppCompat.Light">
