--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,4 +62,11 @@
 
     </android.support.v4.view.ViewPager>
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:id="@+id/frag"
+        android:layout_height="wrap_content">
+
+    </RelativeLayout>
+
 </android.support.constraint.ConstraintLayout>
