--- a/app/src/main/res/layout/main_slide_lay.xml
+++ b/app/src/main/res/layout/main_slide_lay.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
+
+
 
     <com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:sothree="http://schemas.android.com/apk/res-auto"
         android:id="@+id/sliding_layout"
@@ -22,7 +25,7 @@
 
 
         <include
-            android:id="@+id/isgone"
+            android:id="@+id/fragment_container"
             layout="@layout/up_slide_lay"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
