--- a/app/src/main/res/layout/fragment_recent.xml
+++ b/app/src/main/res/layout/fragment_recent.xml
@@ -6,7 +6,7 @@
     tools:context="com.example.ahmadreza.testpop.Fragments.Recent">
 
     <android.support.v4.widget.NestedScrollView
-        android:id="@+id/scrollView"
+        android:id="@+id/scrollView_recent"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
