--- a/app/src/main/res/layout/catego_recy_item.xml
+++ b/app/src/main/res/layout/catego_recy_item.xml
@@ -7,6 +7,7 @@
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/catego_item_cardview"
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:layout_marginBottom="10dp"
