working on playing page

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="Tabbackground">#d82d4059</color>
     <color name="Background">#572d4059</color>
     <color name="btn_more">#2c526b</color>
+    <color name="tap_text">#2b9c9c9c</color>
 </resources>
