--- a/app/src/main/res/layout/catego_second_lay.xml
+++ b/app/src/main/res/layout/catego_second_lay.xml
@@ -7,14 +7,22 @@
     android:background="#ffff"
     tools:context="com.example.ahmadreza.testpop.Fragments.Categories">
 
-    <Button
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/animate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="68dp"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="452dp"
+        android:clickable="true"
+        android:src="@android:drawable/ic_menu_set_as"
+        app:backgroundTint="@android:color/holo_blue_light"
+        app:layout_constraintBottom_toBottomOf="@+id/more_catego"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/catego_song_scroll"
