--- a/app/src/main/res/layout/recent_recy_item.xml
+++ b/app/src/main/res/layout/recent_recy_item.xml
@@ -119,8 +119,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:layout_marginStart="16dp"
-                    android:background="@drawable/below_shadow"
-                    android:foreground="@drawable/above_shadow"
+                    android:background="@drawable/tap_text_round"
                     android:paddingBottom="5dp"
                     android:paddingTop="5dp"
                     android:text="Tap for Image"
@@ -130,6 +129,20 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/artist_imageView"
                     app:layout_constraintTop_toTopOf="@+id/artist_imageView" />
+
+                <TextView
+                    android:id="@+id/album_item_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/below_shadow"
+                    android:foreground="@drawable/above_shadow"
+                    android:padding="2dp"
+                    android:text="Allbum"
+                    android:textColor="@color/cardview_light_background"
+                    android:textSize="17sp"
+                    android:visibility="invisible"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
             </android.support.constraint.ConstraintLayout>
 
         </android.support.v7.widget.CardView>
