working on album recycler view

--- a/app/src/main/res/layout/up_slide_lay.xml
+++ b/app/src/main/res/layout/up_slide_lay.xml
@@ -4,14 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_blue_dark">
+    android:id="@+id/upslidelay">
+
+    <ImageView
+        android:id="@+id/background_image"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/single_album"
+        app:srcCompat="@color/btn_more" />
 
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/below_shadow"
-        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintBottom_toTopOf="@+id/small_img"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -73,8 +83,10 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
-        <include layout="@layout/single_music"
-            android:id="@+id/single"/>
+        <include
+            android:id="@+id/single"
+            layout="@layout/single_music"
+            android:visibility="invisible" />
 
 
     </android.support.constraint.ConstraintLayout>
