fix the AlbumData finder working on recycler view adaptor

--- a/app/src/main/res/layout/up_slide_lay.xml
+++ b/app/src/main/res/layout/up_slide_lay.xml
@@ -86,6 +86,11 @@
         <include
             android:id="@+id/single"
             layout="@layout/single_music"
+            android:visibility="visible" />
+
+        <include
+            android:id="@+id/album"
+            layout="@layout/album_lay"
             android:visibility="invisible" />
 
 
