--- a/app/src/main/res/layout/album_lay.xml
+++ b/app/src/main/res/layout/album_lay.xml
@@ -3,9 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginTop="50dp">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/album_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
